ubiquity (1.7.2) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * XS-Vcs-Bzr is now Vcs-Bzr.
  * Strip out support for creating multiple users in migration-assistant.

  [ Colin Watson ]
  * Copy xserver-xorg/config/display/modes to the installed system before
    reconfiguring usplash (LP: #150930).

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 03 Dec 2007 18:22:51 -0500

ubiquity (1.7.1) hardy; urgency=low

  * clock-setup in d-i now explicitly calls tzsetup, but we handle tzsetup
    earlier on, so remove the tzsetup call in clock-setup.

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 29 Nov 2007 13:59:01 -0500

ubiquity (1.7.0) hardy; urgency=low

  [ Mario Limonciello ]
  * Divert gtk frontend .desktop file and logo  to a better location
    so that it isn't improperly sourced by Xfce.
  * Properly execute mythbuntu frontend from .desktop file.
  * Set default mythtv theme on all installs to be mythtv-theme-mythbuntu.
  * Fix a few typos preventing xmltv from being installed.
  * Launch mythtv-setup.real in a terminal window allowing xmltv
    to be used during it.
  * Fix typo preventing mysql service from activating.
  * Fail more gracefully if we can't do aticonfig.
  * Add apt-cdrom to target system for mythbuntu to work around
    apt-setup not working in ubiquity-mythbuntu. (LP: #154732)

  [ Michael Haas ]
  * Force LC_CTYPE as a temporary workaround for locale issues
    when writing out VNC. (LP: #149935, #150029)

  [ Colin Watson ]
  * Fix ubiquity-frontend-* and ubiquity-artwork-* virtual package name
    generation to handle ~ in versions.
  * Add an intro message noting that we're alpha again.
  * Adjust for localechooser 1.40:
    - Cope with localechooser asking countrychooser/country-name rather than
      countrychooser/shortlist.
  * Remove the pregenerated snakeoil certificate and reconfigure ssl-cert so
    that each system gets a unique snakeoil certificate.

  [ Evan Dandrea ]